--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,13 @@ events {
 http {
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+                      '"$http_user_agent" "$http_x_forwarded_for"'
+                      '$connection $upstream_addr '
+                      'upstream_response_time $upstream_response_time request_time $request_time ';
+
+                    #   '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" '
+                    #   '"$http_user_agent" "$http_x_forwarded_for" "$request_time" "$host" '
+                    #   '"$upstream_status" "$upstream_addr" "$upstream_response_time"' ;
 
     access_log /var/log/nginx/access.log main;
 
